fixed the shifting issue with filter

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -64,7 +64,7 @@
 }
 
 .displayed {
-  display: flex;
+  display: flex !important;
 }
 
 .active-filter {
